icon changes, and fixed dark mode toggle

--- a/inventar-frontend/src/app/shared/create-form/create-form.component.css
+++ b/inventar-frontend/src/app/shared/create-form/create-form.component.css
@@ -2,4 +2,5 @@
     padding: 10px 20px;
     position: relative;
     padding-bottom: 0;
+    background: var(--filter-bg);
 }
